minor spacing fixes for mobile2

--- a/styles.css
+++ b/styles.css
@@ -1182,7 +1182,7 @@ button {
 }
 
 .apart-underline-div {
-  width: 335px;
+  width: 340px;
   color: black;
   /* border-bottom-style: solid;
   border-color: #1f4468;
